Add in coming soon content

--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,9 @@
   <link rel="stylesheet" href="/stylesheets/vendors/help.min.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Audiowide&family=Big+Shoulders+Text:wght@100&family=Bungee+Shade&family=JetBrains+Mono:wght@100&family=Monoton&family=Orbitron&family=Poiret+One&family=Press+Start+2P&family=Unica+One&family=VT323&display=swap"
-    rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Iceland&display=swap" rel="stylesheet">
   <!--
       Notice the use of %PUBLIC_URL% in the tag above.
       It will be replaced with the URL of the `public` folder during the build.
